--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -93,9 +93,7 @@ a {
 }
 
 .content {
-	margin-top: 40px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: auto;
     width: 980px;
     display: block;
 }
