--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -49,6 +49,10 @@
 		<div class="login-box">
 	
 			<form id="login-form" action="#" th:action="@{/login}" th:object="${loginFormData}" method="POST">
+				
+				<p class="error-message" th:unless="${loginFailed == null}">
+				Nem megfelelő felhasználónév, vagy jelszó!
+				</p>
 				<p>
 					<label for="username" class="input-label">FELHASZNÁLÓNÉV:</label>
 				</p>
