--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,27 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>HeroMars - Registration</title>
-
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-	integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-	crossorigin="anonymous">
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-	crossorigin="anonymous"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-	integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-	crossorigin="anonymous"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-	integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-	crossorigin="anonymous"></script>
-
-<link rel="stylesheet" type="text/css" href="../css/index.css" />
+	
+	<meta charset="UTF-8">
+	<title>HeroMars - Registration</title>
+	
+	<link rel="stylesheet" type="text/css" href="../css/index.css" />
+	<link rel="stylesheet" type="text/css" href="../css/login.css" />
 
 </head>
 
@@ -59,29 +44,58 @@
  	</div>
  	  
 	<div class="content">
+	
+		<div class="login-box">
 
-		<form action="#" th:action="@{/register}" th:object="${registrationFormData}" method="POST">
-			<p th:errors="*{userName}"></p>
-			Username: <input type="text" th:field="*{userName}" />
-			<br />
-			<br />
-			<p th:errors="*{password}"></p>
-			Password: <input type="password" th:field="*{password}" /> 
-			<br />
-			<br />
-			<p th:errors="*{confirmPassword}"></p>
-			Password: <input type="password" th:field="*{confirmPassword}" /> 
-			<br />
-			<br />
-			<p th:errors="*{eMail}"></p>
-			E-mail: <input type="email" th:field="*{eMail}" /> 
-			<br />
-			<br />
-			<p th:errors="*{birthYear}"></p>
-			Year of birth: <input type="number" min="1930" max="2001" value="1988" th:field="*{birthYear}" />
-			<br/> 
-			<input type="submit" value="Regisztráció" />
-		</form>
+			<form id="login-form" action="#" th:action="@{/register}" th:object="${registrationFormData}" method="POST">
+				
+				<p>
+					<label for="username" class="input-label">FELHASZNÁLÓNÉV:</label>
+				</p>
+				<p>
+					<input type="text" id="username" class="input-field" th:field="*{userName}"/>
+				</p>
+				<p class="error-message" th:errors="*{userName}"></p>
+				
+				<p>
+					<label for="password" class="input-label">JELSZÓ:</label>
+				</p>
+				<p>
+					<input type="password" id="password" class="input-field" th:field="*{password}" />
+				</p>
+				<p class="error-message" th:errors="*{password}"></p>
+				
+				<p>
+					<label for="confirmMassword" class="input-label">JELSZÓ MEGERŐSÍTÉSE:</label>
+				</p>
+				<p>
+					<input type="password" id="confirmMassword" class="input-field" th:field="*{confirmPassword}" />
+				</p>
+				<p class="error-message" th:errors="*{confirmPassword}"></p>
+				
+				<p>
+					<label for="eMail" class="input-label">E-MAIL:</label>
+				</p>
+				<p>
+					<input type="email" id="eMail" class="input-field" th:field="*{eMail}" />
+				</p>
+				<p class="error-message" th:errors="*{eMail}"></p>
+
+				<p>
+					<label for="birthYear" class="input-label">SZÜLETÉSI ÉV:</label>
+				</p>
+				<p>
+					<input type="number" id="birthYear" class="input-field" min="1930" max="2001" value="1988" th:field="*{birthYear}" />
+				</p>
+				<p class="error-message" th:errors="*{birthYear}"></p>
+
+				<p>
+					<input type="submit" class="enter-button" value="REGISZTRÁCIÓ" />
+				</p>
+				
+			</form>
+			
+		</div>
 		
 	</div>
 
