project logo added to main menu

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,7 +17,9 @@
 	<div class="menuLine">
 		<div class="mainMenu">
 
-			<div class = "top-bar-data"></div>
+			<div class = "top-bar-data">
+				<img src="../img/logo.jpg" height="34"/>
+			</div>
 
 	        <a th:href="@{/main}">
 	        	<div class = "top-bar-data">Főoldal</div>
