Smith page design done.

--- a/src/main/resources/templates/smith.html
+++ b/src/main/resources/templates/smith.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Kovácsműhely</title>
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
+	<link rel="stylesheet" type="text/css" href="../css/smith.css" />
 </head>
 <body>
 
@@ -66,7 +67,7 @@
 		
 			<table>
 				<tr>
-			    	<th colspan="4">Kovácsolható eszközök</th>
+			    	<th colspan="9" align="center">Kovácsolható eszközök</th>
 			  	</tr>
 			  	<tr>
 			    	<th>Név</th>
@@ -97,7 +98,7 @@
 			
 			<br/>
 			
-			<input type="submit" value="Kovácsol" />
+			<input type="submit" class="createButton" />
 		
 		</form>
 		
