Correction in alignment.

--- a/src/main/resources/templates/smith.html
+++ b/src/main/resources/templates/smith.html
@@ -97,8 +97,9 @@
 			</table>
 			
 			<br/>
-			
-			<input type="submit" class="createButton" />
+				<div style="text-align:center;">
+					<input type="submit" class="createButton" />
+				</div>
 		
 		</form>
 		
