--- a/src/main/resources/templates/hero_data.html
+++ b/src/main/resources/templates/hero_data.html
@@ -63,7 +63,7 @@
 			<div class = "top-bar-data top-bar-log"></div>
 			
 			<div class="secondaryMenu">
-				<a th:href="@{/hero}" >Hős statisztika</a>
+				<a class="actualMenu" th:href="@{/hero}" >Hős statisztika</a>
 				<a th:href="@{/hero_actions}" >Hős akciók</a>
 				<a th:href="@{/market}">Piactér</a>
 				<a th:href="@{/smith}">Kovácsműhely</a>
@@ -76,142 +76,175 @@
     
 	    <div class="contentContainer" th:object="${hero}">
 	    
-			<table>
-				<tr>
-			    	<th colspan="3" th:text="${sessionData.currentHeroName}"></th>
-			  	</tr>
-				<tr>
-					<td rowspan="4">
+	    	<div class="lineWrapper">
+	    	
+	    	<h3 class="message" th:text="'--- ' + ${sessionData.currentHeroName} + ' ---'"></h3>
+	    	
+	    	</div>
+	    
+	    	<div class="lineWrapper">
+	    	
+		    	<div class="tableContainer1">	
+		    	
+					<table>
+						<tr>
+					    	<th colspan="3">Attribútumok</th>
+					  	</tr>
+						<tr>
+							<td class="pictureContainer" rowspan="4">
+							
+							<img class="species" th:src="@{*{'../img/' + species.description + '.jpg'}}" th:title="*{species.description}" />
+							
+							</td>
+							<td>Szint:</td>
+							<td th:text="*{heroLevel}"></td>
+						</tr>
+					  	<tr>
+					    	<td>Élet:</td>
+					    	<td th:text="*{hp}"></td>
+					  	</tr>
+					  	<tr>
+					    	<td>Erő:</td>
+					    	<td th:text="*{strength}"></td>
+					  	</tr>
+					  	<tr>
+					    	<td>Bölcsesség:</td>
+					    	<td th:text="*{wisdom}"></td>
+					  	</tr>
+					</table>
+				
+				</div>
+				
+				<div class="tableContainer2">
+				
+					<table>
+						<tr>
+					    	<th colspan="2">Kinézet</th>
+					    	<th colspan="2">Nyersanyagok</th>
+					  	</tr>
+						<tr>
+							<td>Magasság:</td>
+							<td th:text="*{height}"></td>
+							<td>Étel:</td>
+							<td th:text="*{food}"></td>
+						</tr>
+					  	<tr>
+							<td>Súly:</td>
+							<td th:text="*{weight}"></td>
+							<td>Víz:</td>
+							<td th:text="*{water}"></td>
+					  	</tr>
+					  	<tr>
+							<td>Hajszín:</td>
+							<td th:text="*{hairColor.description}"></td>
+							<td>Arany:</td>
+							<td th:text="*{money}"></td>
+					  	</tr>
+					  	<tr>
+							<td>Nem:</td>
+							<td th:text="*{sex.description}"></td>
+							<td>Akció pontok:</td>
+							<td th:text="*{actionPoint}"></td>
+					  	</tr>
+					</table>
+				
+				</div>
+			
+			</div>
+			
+			<div class="lineWrapper">
+			
+				<div class="tableContainer1">	
+				
+					<table>
+						<tr>
+					    	<th colspan="5">A raktárban elfekvő eszközök</th>
+					  	</tr>
+					  	<tr class="title2">
+					    	<th>Név</th>
+					    	<th>Szint</th>
+					    	<th>Típus</th>
+					    	<th>Tartósság</th>
+					    	<th>Eladás</th>
+					  	</tr>
+					  	<tbody class="itemList">
+					  	<tr th:each="item: *{items}" th:unless="${item.marketPresence != null || item.isInUse == true}" th:ondblclick="'handleItemMove(\'' + ${item.itemId} + '\');'">
+							<td th:text="${item.name.description}" />
+							<td th:text="${item.level}" />
+							<td th:text="${item.type}" />
+							<td th:text="${item.durability}" />
+							<td>
+								<input type="submit" value="Piacra kitesz" th:onclick="'placeItemToMarket(\'' + ${item.itemId} + '\');'" />
+							</td>
+						</tr>
+						</tbody>
+					</table>
+				
+				</div>
+				
+				<div class="tableContainer2">
+				
+					<table>
+						<tr>
+					    	<th colspan="4">A hős által használt eszközök</th>
+					  	</tr>
+					  	<tr class="title2">
+					    	<th>Név</th>
+					    	<th>Szint</th>
+					    	<th>Típus</th>
+					    	<th>Tartósság</th>
+					  	</tr>
+					  	<tbody class="itemList">
+					  	<tr th:each="item: *{items}" th:unless="${item.marketPresence != null || item.isInUse == false}" th:ondblclick="'handleItemMove(\'' + ${item.itemId} + '\');'">
+							<td th:text="${item.name.description}" />
+							<td th:text="${item.level}" />
+							<td th:text="${item.type}" />
+							<td th:text="${item.durability}" />
+						</tr>
+						</tbody>
+					</table>
+				
+				</div>
+			
+			</div>
+			
+			<div class="lineWrapper" th:unless="${itemChangeMessage == null}">
+			
+				<h4 class="message" th:text="'- ' + ${itemChangeMessage} + ' -'"></h4>
+			
+			</div>
+			
+			<div class="lineWrapper">
+			
+				<div class="tableContainer1">
+				
+					<table>
 					
-					<img th:src="@{*{'../img/' + species.description + '.jpg'}}" th:title="*{species.description}" />
+						<tr>
+					    	<th colspan="4">Skillek</th>
+					  	</tr>
+					  	<tr>
+					    	<th>Név</th>
+					    	<th>+Élet</th>
+					    	<th>+Erő</th>
+					    	<th>+Bölcsesség</th>
+					  	</tr>
+					  	<tbody>
+					  	<tr th:each="skill: *{skills}" th:unless="*{skills == null}">
+							<td th:text="${skill.skillType.description}" />
+							<td th:text="${skill.skillType.skillHpMod}" />
+							<td th:text="${skill.skillType.skillStrengthMod}" />
+							<td th:text="${skill.skillType.skillWisdomMod}" />
+						</tr>
+						</tbody>
 					
-					</td>
-					<td>Szint:</td>
-					<td th:text="*{heroLevel}"></td>
-				</tr>
-			  	<tr>
-			    	<td>Élet:</td>
-			    	<td th:text="*{hp}"></td>
-			  	</tr>
-			  	<tr>
-			    	<td>Erő:</td>
-			    	<td th:text="*{strength}"></td>
-			  	</tr>
-			  	<tr>
-			    	<td>Bölcsesség:</td>
-			    	<td th:text="*{wisdom}"></td>
-			  	</tr>
-			</table>
+					</table>
+					
+				</div>
+				
+			</div>
 			
-			<br/>
-			
-			<table>
-				<tr>
-			    	<th colspan="2">Kinézet</th>
-			    	<th colspan="2">Nyersanyagok</th>
-			  	</tr>
-				<tr>
-					<td>Magasság:</td>
-					<td th:text="*{height}"></td>
-					<td>Étel:</td>
-					<td th:text="*{food}"></td>
-				</tr>
-			  	<tr>
-					<td>Súly:</td>
-					<td th:text="*{weight}"></td>
-					<td>Víz:</td>
-					<td th:text="*{water}"></td>
-			  	</tr>
-			  	<tr>
-					<td>Hajszín:</td>
-					<td th:text="*{hairColor.description}"></td>
-					<td>Arany:</td>
-					<td th:text="*{money}"></td>
-			  	</tr>
-			  	<tr>
-					<td>Nem:</td>
-					<td th:text="*{sex.description}"></td>
-					<td>Akció pontok:</td>
-					<td th:text="*{actionPoint}"></td>
-			  	</tr>
-			</table>
-			
-			<br/>
-			
-			<p th:text="${itemChangeMessage}" th:unless="${itemChangeMessage == null}"></p>
-			
-			<br/>
-			
-			<table>
-				<tr>
-			    	<th colspan="4">A hős által használt eszközök</th>
-			  	</tr>
-			  	<tr>
-			    	<th>Név</th>
-			    	<th>Szint</th>
-			    	<th>Típus</th>
-			    	<th>Tartósság</th>
-			  	</tr>
-			  	<tbody class="itemList">
-			  	<tr th:each="item: *{items}" th:unless="${item.marketPresence != null || item.isInUse == false}" th:ondblclick="'handleItemMove(\'' + ${item.itemId} + '\');'">
-					<td th:text="${item.name.description}" />
-					<td th:text="${item.level}" />
-					<td th:text="${item.type}" />
-					<td th:text="${item.durability}" />
-				</tr>
-				</tbody>
-			</table>
-			
-			<br/>
-			
-			<table>
-				<tr>
-			    	<th colspan="4">A raktárban elfekvő eszközök</th>
-			  	</tr>
-			  	<tr>
-			    	<th>Név</th>
-			    	<th>Szint</th>
-			    	<th>Típus</th>
-			    	<th>Tartósság</th>
-			    	<th>Eladás</th>
-			  	</tr>
-			  	<tbody class="itemList">
-			  	<tr th:each="item: *{items}" th:unless="${item.marketPresence != null || item.isInUse == true}" th:ondblclick="'handleItemMove(\'' + ${item.itemId} + '\');'">
-					<td th:text="${item.name.description}" />
-					<td th:text="${item.level}" />
-					<td th:text="${item.type}" />
-					<td th:text="${item.durability}" />
-					<td>
-						<input type="submit" value="Piacra kitesz" th:onclick="'placeItemToMarket(\'' + ${item.itemId} + '\');'" />
-					</td>
-				</tr>
-				</tbody>
-			</table>
-			
-			<br/>
-			
-			<table>
-			
-				<tr>
-			    	<th colspan="4">Skillek</th>
-			  	</tr>
-			  	<tr>
-			    	<th>Név</th>
-			    	<th>+Élet</th>
-			    	<th>+Erő</th>
-			    	<th>+Bölcsesség</th>
-			  	</tr>
-			  	<tbody>
-			  	<tr th:each="skill: *{skills}" th:unless="*{skills == null}">
-					<td th:text="${skill.skillType.description}" />
-					<td th:text="${skill.skillType.skillHpMod}" />
-					<td th:text="${skill.skillType.skillStrengthMod}" />
-					<td th:text="${skill.skillType.skillWisdomMod}" />
-				</tr>
-				</tbody>
-			
-			</table>
-			
+			<p class="message">...</p>
 	    
 	    </div>
     
